--- a/style.css
+++ b/style.css
@@ -32,12 +32,13 @@ nav {
 }
 
 .nav-links {
-    width: 20rem;
+    width: 30rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     font-size: 1.25rem;
+    text-transform:capitalizegit stau;
     color:#999;
 }
 
