--- a/style.css
+++ b/style.css
@@ -22,9 +22,17 @@ a{
 
 .section-content {
     width: 100%;
-    height: 70vh;
+    height: 85vh;
+    padding: 1.5rem 1.5rem;
+    background-color: black ;
 }
 
+.container {
+    display: flex;
+    align-content:center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
 nav {
     width: 100%;
     padding: 1rem .5rem;
@@ -99,4 +107,36 @@ nav {
     font-family: 'Rouge Script', 'cursive';
     font-weight: 400;
     text-align: center;
+}
+
+.section-title {
+    width: 100%;
+    height: 5rem;
+    text-align: center;
+}
+
+.section-title h3 {
+    font-size: 3rem;
+    font-family: 'Rouge Script', 'cursive';
+    text-transform:capitalize;
+    letter-spacing: 5px;
+    color: grey;
+}
+
+.about-img {
+    width: 100%;
+    height:30rem;
+    object-fit: cover;
+}
+
+.about-content {
+    width: 35rem;
+    height:25rem;
+}
+
+.about-content p {
+    color: white;
+    font-family: 'Roboto','sans-serif';
+    font-size: 1.25rem;
+    line-height: 2rem;
 }
