--- a/style.css
+++ b/style.css
@@ -9,8 +9,25 @@
     scroll-behavior: smooth;
 }
 
-h1, h2, h3, h4, h5, h6, p, a {
-    font-family: 'Roboto', sans-serif;
+:root {
+    --clr-floral-white: #FFFCF2;
+    --clr-pale-silver: #CCC5B9;
+    --clr-deep-chestnut: #BF4342;
+    --clr-eerie-black: #252422;
+    --clr-charcoal: #2E4052;
+    --ff-header: 'Rouge Script','cursive';
+    --ff-primary: 'Roboto','sans-serif';
+    --transition: all 0.3s linear;
+    --spacing: 0.25rem;
+    --radius: 0.5rem;
+}
+/* universal styles*/
+body {
+    font-family: var(--ff-primary);
+    background: var(--clr-eerie-black);
+    color: var(--clr-floral-white);
+    line-height: 1.5;
+    font-size: 0.875rem;
 }
 
 ul {
@@ -21,156 +38,222 @@ a{
     text-decoration: none;
 }
 
-.section-content {
+img {
     width: 100%;
-    height: 85vh;
-    padding: 1.5rem 1.5rem;
-    background-color: black ;
+    display: block;
 }
 
-.container {
-    display: flex;
-    align-content:center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+h1, h2, h3, h4 {
+    letter-spacing: var(--spacing);
+    text-transform: capitalize;
+    line-height: 1.25;
+    margin-bottom: 0.75rem;
+}
+
+h1{
+font-size: 3rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.25rem;
+}
+
+h4 {
+    font-size: 0.875rem;
+}
+
+p {
+    margin-bottom: 1.25rem;
+    color: var(--clr-pale-silver);
+}
+
+@media  screen and (min-width:800px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 1.75rem;
+    }
+
+    h4 {
+        font-size: 1rem;
+    }
+
+    body {
+        font-size: 1rem;
+    }
+
+    h1, h2, h3, h4 {
+        line-height: 1;
+    }
+}
+
+/* global classes*/
+
+.btn {
+    text-transform: capitalize;
+    background: var(--clr-deep-chestnut);
+    color:var(--clr-floral-white);
+    padding: 0.375rem 0.75rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    transition: var(--transition);
+    font-size: 00.875rem;
+    border: 2px solid transparent;
+    cursor: pointer;
+}
+
+.btn:hover {
+    color: var(--clr-charcoal);
+    background: var(--clr-floral-white);
+}
+
+.section {
+    padding: 5rem 0;
 }
 
 .section-title {
-    width: 100%;
-    height: 5rem;
     text-align: center;
+    margin-bottom: 4rem;
 }
 
-.section-title h3 {
-    font-size: 3rem;
-    font-family: 'Rouge Script', 'cursive';
-    text-transform:capitalize;
-    letter-spacing: 5px;
-    color: grey;
+.section-title h2 {
+    text-transform: uppercase;
 }
 
-/*=== navigation ====*/
-
-nav {
-    width: 100%;
-    padding: 1rem .5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: black;
+.section-center {
+    width: 90vw;
+    margin: 0 auto;
+    max-width: 1170px;
 }
 
-.nav-links {
-    width: 30rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    font-size: 1.25rem;
-    text-transform:capitalize;
-    color:#999;
+@media screen and (min-width: 992px){
+    .section-center {
+        width: 95vw;
+    }
 }
 
-.nav-links a {
-    color: grey;
-}
+/* navbar*/
 
-.nav-links a:hover {
-    color:crimson;
-    transition: 1.5s;
-    cursor: pointer;
-}
-
-.nav-title a {
-    color: grey;
-}
-
-.social-icons {
-    width: 10rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 1.5rem;
-    color: grey;
-    cursor: pointer;
-}
-
-.social-icons a:hover {
-    color: crimson;
-    transition: 1.5s;
-    cursor: pointer;
-}
-
-
-/*=== header ===*/
-
-.header {
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    padding: 1.5rem 2rem;
-    background: no-repeat center/100% url('images/_MG_0365.jpg');
-    position: relative;
-}
-
-.header-title {
-    width: 40%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
+.navbar {
+    position: fixed;
     top:0;
-    right:0;
-}
-
-.header-title h3{
-    color: white;
-    font-size: 3.5rem;
-    font-family: 'Rouge Script', 'cursive';
-    font-weight: 400;
-    text-align: center;
-}
-
-/*=== about section ===*/
-.about-img {
+    left:0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: .25rem;
+    background: var(--clr-eerie-black);
+    z-index: 100;
 }
 
-.about-content {
-    width: 35rem;
-    height:30rem;
-    border-radius: 1rem;
+.nav-icons {
+    display: none;
 }
 
-.about-content p {
-    color:lightgrey;
-    font-family: 'Roboto','sans-serif';
-    font-size: 1.25rem;
-    line-height: 2rem;
-    text-align: center;
-}
-
-/*=== services ===*/
-
-/*=== gallery ===*/
-
-/*=== comtact ===*/
-
-/*=== footer ===*/
-
-.footer {
+.nav-center {
     width: 100%;
-    background-color: crimson;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.nav-header {
     display: flex;
-    align-content: center;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem 2rem;
 }
 
-.footer p {
-    text-transform: capitalize;
+.nav-toggle {
+    background: transparent;
+    border: transparent;
+    font-size: 1.5rem;
+    color: var(--clr-pale-silver);
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.nav-toggle:hover {
+    transform: scale(1.2);
+}
+
+.nav-link {
+    display: block;
+    padding: 1rem 2rem;
+    text-transform:capitalize;
+    letter-spacing: var(--spacing);
+    transition: var(--transition);
+    color: var(--clr-floral-white);
+    cursor: pointer;
+}
+
+.nav-link:hover {
+    color: var(--clr-deep-chestnut);
+    padding-left: 2.25rem;
+}
+
+.nav-links {
+    height: 0;
+    overflow: hidden;
+    transition: var(--transition);
+}
+.show-links {
+    height: 280px;
+}
+
+@media screen and (min-width: 992px) {
+    .navbar {
+        padding: 1rem 2rem;
+    }
+
+    .nav-toggle {
+        display: none;
+    }
+
+    .nav-center {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .nav-links {
+        height: auto;
+        display: flex;
+
+    }
+
+    .nav-header {
+        padding: 0 0;
+    }
+
+    .nav-link {
+        padding: 0 0;
+        margin-right: 0.75rem;
+    }
+
+    .nav-link:hover {
+        padding: 0;
+        color: var(--clr-deep-chestnut);
+        background: transparent;
+    }
+
+    .nav-icons {
+        display: flex;
+    }
+
+    .nav-icon {
+        margin-right: 1rem;
+        font-size: 1.5rem;
+        color: var(--clr-floral-white);
+    }
+
+    .nav-icon:hover {
+        color: var(--clr-deep-chestnut);
+    }
 }
