about section concept

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ p {
     max-width: 1170px;
 }
 
-@media screen and (min-width: 992px){
+@media screen and (min-width:992px){
     .section-center {
         width: 95vw;
     }
@@ -262,7 +262,7 @@ p {
 
 .hero {
     min-height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/_MG_0365.jpg") center/95% no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)), url("/images/_MG_0365.jpg") center/cover no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -272,6 +272,7 @@ p {
     text-align: center;
     color: var(--clr-floral-white);
     padding: 0 3rem;
+    margin-top: 25%;
 }
 
 .hero-banner h1 {
@@ -297,4 +298,38 @@ p {
     background: transparent;
     color: var(--clr-pale-silver);
     border-color: var(--clr-pale-silver);
+}
+
+@media screen and (min-width: 768px) {
+    .hero-banner {
+        padding: 0;
+    }
+}
+
+/*=== about section ===*/
+
+.about-info,
+.about-img {
+    margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 992px){
+    .about-center {
+        display:flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .about-img, 
+    .about-info {
+        flex: 0 0 calc(50% -2rem);
+        margin-bottom: 0;
+        align-selF: center;
+    }
+}
+
+@media screen and (min-width: 1170px) {
+    .about-img::before {
+        
+    }
 }
