--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ p {
 
 .section-title {
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
 }
 
 .section-title h2 {
@@ -253,6 +253,7 @@ p {
         margin-right: 1rem;
         font-size: 1.5rem;
         color: var(--clr-floral-white);
+        transition: var(--transition);
     }
 
     .nav-icon:hover {
@@ -272,7 +273,7 @@ p {
     text-align: center;
     color: var(--clr-floral-white);
     padding: 0 3rem;
-    margin-top: 25%;
+    margin-top: 7rem;
 }
 
 .hero-banner h1 {
@@ -301,6 +302,10 @@ p {
 }
 
 @media screen and (min-width: 768px) {
+
+    /*.hero {
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)), url("/images/_MG_0365.jpg") center/cover no-repeat;
+    } */
     .hero-banner {
         padding: 0;
     }
@@ -314,6 +319,7 @@ p {
 }
 
 @media screen and (min-width: 992px){
+
     .about-center {
         display:flex;
         justify-content: space-between;
@@ -322,14 +328,30 @@ p {
 
     .about-img, 
     .about-info {
-        flex: 0 0 calc(50% -2rem);
+        flex: 0 0 calc(50% - 2rem);
         margin-bottom: 0;
         align-selF: center;
     }
 }
 
 @media screen and (min-width: 1170px) {
+
     .about-img::before {
-        
+        content: "";
+        position: absolute;
+        top: -1.5rem;
+        left: -1.5rem;
+        border:  0.5rem solid var(--clr-pale-silver);
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
     }
+
+    .about-img {
+        position: relative;
+    }
+    .about-info{
+        position: relative;
+    }
+
 }
