--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
     --transition: all 0.3s linear;
     --spacing: 0.25rem;
     --radius: 0.5rem;
+    --light-shadow: 0 5px 15px #CCC5B9;
+    --dark-shadow: 0 5px 15px #2E4052;
 }
 /* universal styles*/
 body {
@@ -354,4 +356,89 @@ p {
         position: relative;
     }
 
+}
+
+.service-card {
+    transition: var(--transition);
+    background: var(--clr-pale-silver);
+    box-shadow: var(--light-shadow);
+    margin-bottom: 2rem;
+    border-radius: var(--radius);
+}
+
+.service-card:hover {
+    box-shadow: var(--light-shadow);
+    transform: scale(1.02);
+}
+
+.service-img-container {
+    position: relative;
+}
+
+.service-img {
+    height: 15rem;
+    object-fit: cover;
+    border-top-left-radius: var(--radius);
+    border-top-right-radius: var(--radius);
+}
+
+.service-name {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: var(--clr-deep-chestnut);
+    text-transform: capitalize;
+    padding: 0.25rem 0.5rem;
+}
+
+.service-info {
+    padding: 1.25rem 1.5rem;
+}
+
+.service-title {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.service-title p,
+.service-title h4 {
+    margin-bottom: 0.75rem;
+    line-height: 1.25;
+}
+
+.service-title p {
+    color:var(--clr-rich-black);
+}
+
+.service-footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.service-footer p {
+    line-height: 0;
+    margin-bottom: 0;
+    text-transform: capitalize;
+    color: var(--clr-charcoal);
+}
+
+@media screen and (min-width:768px) {
+    .service-center{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .service-card {
+        flex: 0 0 calc(50% - 2rem);
+    }
+}
+
+@media screen and (min-width:1170px) {
+    .service-card {
+        flex: 0 0 calc(33.333% - 3rem);
+    }
 }
